...
    return Padding(
      padding: const EdgeInsets.only(top: 5, right: 5),
      child: Row(
        mainAxisAlignment: MainAxisAlignment.end,
        children: [
          IconButton(
            key: const ValueKey('app_bar_search'),
            icon: const Icon(Icons.search, size: 20),
            onPressed: () => context.goToSearch(),
            focusColor: Colors.red,
          ),
          const SizedBox(width: 10),
          IconButton(
            key: const ValueKey('app_bar_source'),
            icon: const Icon(Icons.source, size: 20),
            onPressed: () => context.goToSourceManage(),
            focusColor: Colors.red,
          ),
          // FIXME(dove): 2026-02-02 判断的不对, 实际设备是 TV, 但是也没显示二维码
          // if ($platform.isMobileNative &&
          //     context.mediaQuery.deviceType == DeviceType.tv) ...[
          const SizedBox(width: 10),
          IconButton(
            key: const ValueKey('app_bar_settings'),
            icon: const Icon(Icons.settings, size: 20),
            onPressed: _showQRCodeDialog,
            focusColor: Colors.red,
          ),
          // ],
        ],
...
